--- a/views/sections/index.pug
+++ b/views/sections/index.pug
@@ -4,7 +4,7 @@ html
 		title Nightlife
 		link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro")
 		link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css")
-		link(rel="shortcut icon", href="#")
+		link(rel="shortcut icon" type="image/ico" href="../img/favicon.ico")
 		link(rel="stylesheet" href="../css/index.css")
 	body
 		include ../partials/_navbar
